fixing english mistake

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Between Salerno and Harvard, I worked for Olivetti, in Ivrea, Italy.
 </p>
 
 <p>
-I have been an Associate Professor of Computer Science at the 
+I was an Associate Professor of Computer Science at the 
 <i>Dipartimento di Matematica</i> of the Universit&agrave; di Catania, Catania, Italy, from 1992 to 1994. 
 Then I moved to Salerno as a Professor of Computer Science.
 </p>
