--- a/subjects/lowerbounds.html
+++ b/subjects/lowerbounds.html
@@ -71,7 +71,7 @@
     <li>With Kevin Yeo, 
     in <a href=https://link.springer.com/chapter/10.1007/978-3-031-38551-3_6>CRYPTO 2023</a>,
     we prove that differentially private RAMs have the same slowdown even
-    with respect to a transiente adversary that receives two memory snapshot
+    with respect to a transient adversary that receives two memory snapshot
     and the transcript of one operation.
     
     <li>With Kevin Yeo, 
