starting the page on the anamorphic papers

--- a/subjects/anamorphic.html
+++ b/subjects/anamorphic.html
@@ -9,16 +9,16 @@
     more democratic governments have often expressed uncomfortable feelings
     regarding the widespread use of strong encryption in the context
     of online communication.
-    The following is a quote of David Cameron, January 2015-a
+    The following is a quote of David Cameron, January 2015-b
     (see <a href="https://www.theguardian.com/uk-news/2015/jan/12/uk-spy-agencies-need-more-powers-says-cameron-paris-attacks">here</a>)
 
-<p bgcolor=yellow, fgcolor=black>
+<pre bgcolor=yellow, fgcolor=black>
         In our country, do we want to allow 
         a means of communication between people 
         which even in extremis, with a signed 
         warrant from the Home Secretary personally, 
         that we cannot read?
-</p>
+</pre>
 
 This can create and indeed has already created tension 
 between industry or privacy advocates and governments, known as 
