--- a/subjects/anamorphic.html
+++ b/subjects/anamorphic.html
@@ -10,11 +10,14 @@
     regarding the widespread use of strong encryption in the context
     of online communication.
     The following is a quote of David Cameron, January 2015:
+
+<div bgcolor=gray>
         <i>In our country, do we want to allow 
         a means of communication between people 
         which even in extremis, with a signed 
         warrant from the Home Secretary personally, 
         that we cannot read?</i>
+</div>
     (see <a href="https://www.theguardian.com/uk-news/2015/jan/12/uk-spy-agencies-need-more-powers-says-cameron-paris-attacks">here</a>)
 This can create and indeed has already created tension 
 between industry or privacy advocates and governments, known as 
@@ -25,7 +28,8 @@ Numerous non-direct arguments against such policies have been raised,
 such as "<i>the bad guys can utilize other encryption system</i>" 
 so all other cryptosystems have to be declared illegal, or that 
 "<i>allowing the government access is an ill-advised policy since it creates a natural weak systems security point, which may attract others (to masquerade as the government)</i>". 
-<br>
+
+<p>
 The notion of an <i>Anamorphic Encryption</i>, introduced in 
 <a href=https://eprint.iacr.org/2022/639>[PPY22]</a>, 
 is a <i>technical</i> demonstration of the futility of the Crypto Wars:
