--- a/subjects/anamorphic.html
+++ b/subjects/anamorphic.html
@@ -1,5 +1,13 @@
     <section>
     <script src="js/subject.js" type="text/javascript"></script>
+<style>
+.myDiv {
+  background-color: #eeeeee;
+  color: brown;    
+  text-align: justify;
+}
+</style>
+    
     <h1>The anamorphic papers </h1>
 
     <h3>Background</h3>
@@ -11,7 +19,7 @@
     of online communication.
     The following is a quote of David Cameron, January 2015:
 
-<div bgcolor=gray>
+<div class="myDiv">
         <i>In our country, do we want to allow 
         a means of communication between people 
         which even in extremis, with a signed 
