starting the page on the anamorphic papers

--- a/subjects/anamorphic.html
+++ b/subjects/anamorphic.html
@@ -5,6 +5,7 @@
   background-color: #eeeeee;
   color: brown;    
   text-align: justify;
+  border: 15px;
 }
 </style>
     
@@ -25,8 +26,8 @@
         which even in extremis, with a signed 
         warrant from the Home Secretary personally, 
         that we cannot read?</i>
-</div>
     (see <a href="https://www.theguardian.com/uk-news/2015/jan/12/uk-spy-agencies-need-more-powers-says-cameron-paris-attacks">here</a>)
+</div>
 This can create and indeed has already created tension 
 between industry or privacy advocates and governments, known as 
 <i>Crypto Wars</i>.
