starting the page on the anamorphic papers

--- a/subjects/anamorphic.html
+++ b/subjects/anamorphic.html
@@ -5,7 +5,10 @@
   background-color: #eeeeee;
   color: brown;    
   text-align: justify;
-  border: 15px;
+  border: 35px;
+  width: 75%;
+  padding: 10px;
+  margin: auto;
 }
 </style>
     
