starting the page on the anamorphic papers

--- a/subjects/anamorphic.html
+++ b/subjects/anamorphic.html
@@ -21,7 +21,8 @@
     more democratic governments have often expressed uncomfortable feelings
     regarding the widespread use of strong encryption in the context
     of online communication.
-    The following is a quote of David Cameron, January 2015:
+    The following is a quote of David Cameron, Prime Minister of the United
+    Kingdom, January 2015:
 
 <div class="myDiv">
         <i>In our country, do we want to allow 
