--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@ My main research area is Theoretical Computer Science with a special focus on Cr
 <b>Recent Papers</b>
 <ul>
 <li>
+<i>Optimal Non-Adaptive Cell Probe Dictionaries and Hashing</i>
+<a href=https://arxiv.org/abs/2308.16042>ICALP 2024,</a>
+with
+Kasper Green Larsen, Rasmus Pagh, Toniann Pitassi, Kevin Yeo, and Or Zamir.
+<br>
+[<a href="javascript:toggle('abstract10');">Show/Hide abstract</a>]
+<div class="abstract" id="abstract10" style="display:none;">
+We present a simple and provably optimal non-adaptive cell probe data structure for the static dictionary problem. Our data structure supports storing a set of n key-value pairs from
+[u]X[u] using s words of space and answering key lookup queries in 
+t=O(lg(u/n)/lg(s/n)) nonadaptive probes.
+This generalizes a solution to the membership problem 
+(i.e., where no values are associated with keys) due to Buhrman et al..
+We also present matching lower bounds for the non-adaptive static membership problem in the deterministic setting. Our lower bound implies that both our dictionary algorithm and the preceding membership algorithm are optimal, and in particular that there is an inherent complexity gap in these problems between no adaptivity and one round of adaptivity (with which hashing-based algorithms solve these problems in constant time). Using the ideas underlying our data structure, we also obtain the first implementation of a n-wise independent family of hash functions with optimal evaluation time in the cell probe model.
+</div>
+
+
+
+<li>
 <i>Anamorphic Signatures: Secrecy from a Dictator Who Only Permits Authentication!</i>
 <a href=https://link.springer.com/chapter/10.1007/978-3-031-38545-2_25>CRYPTO 23,</a>
 with Miroslaw Kutylowski, Duong Hieu Phan, Moti Yung, and  Marcin Zawada:
@@ -240,7 +258,11 @@ conference was great!
 <li> Area Chair for Theoretical Foundations and Advanced Primitives for <a href=https://pkc.iacr.org/2024/callforpapers.php>PKC 2024</a> in Sydney.
 Deadline for submissions: Oct. 15, 2023.
 
-<li> CRYPTO 2024
+<li> 
+<a href=https://crypto.iacr.org/2024/>CRYPTO 2024</a>. Conference: August 18-22, 2024
+<li>
+<a href=https://scn.unisa.it/scn24/>SCN 24</a>. 
+Conference: September 11-13, 2024
 </ul>
 
 
