--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@ My main research area is Theoretical Computer Science with a special focus on Cr
 <b>Recent Papers</b>
 <ul>
 <li>
-<i>Optimal Non-Adaptive Cell Probe Dictionaries and Hashing</i>
+<i>Public-Key Anamorphism in (CCA-secure) Public-Key Encryption and Beyond</i>. CRYPTO 24, 
+with Duong Hieu Phan and Moti Yung.
+
+<li>
+<i>Efficient Secret Sharing for Large-Scale Applications</i>.
+CCS 24, 
+with Sarvar Patel, Joon Young Seo, and Kevin Yeo.
+
+<li>
+<i>Optimal Non-Adaptive Cell Probe Dictionaries and Hashing</i>.
 <a href=https://arxiv.org/abs/2308.16042>ICALP 2024,</a>
 with
 Kasper Green Larsen, Rasmus Pagh, Toniann Pitassi, Kevin Yeo, and Or Zamir.
