adding school in Vodice

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Conference: September 11-13, 2024
 
 <b>Recent activities</b>
 <ul>
-<li>Lecturing on Anamorphic Cryprography at
+<li>Lecturing on Anamorphic Cryptography at the
 <a href=https://summerschool-croatia.cs.ru.nl/2024/>Summer School on real-world crypto and privacy 2024</a> in Vodice, Croatia, June 2-4, 2024.
 <li>Attending <a href=https://crypto.iacr.org/2023/>CRYPTO 2023</a> in Santa Barbara.
 <li>Attending the <a href=https://petsymposium.org/2023/>23rd Privacy Enhancing Technologies Symposium</a>
