slides for school in Croatia

--- a/Technical/index.html
+++ b/Technical/index.html
@@ -40,5 +40,6 @@ layout: default
         anamorphic encryption. Establishing prevalence of anamorphic
             encryption.
     <li><a href=./slides/anamorphicSignatures.pdf>Anamorphic Signatures</a> talk, given at NYU, August 23.
+    <li><a href=.slides/croatia.pdf>Summer School on real-world crypto and privacy 2024</a> 
 
 </ul>
