Link to secret sharing paper

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ with Duong Hieu Phan and Moti Yung.
 
 <li>
 <i>Efficient Secret Sharing for Large-Scale Applications</i>.
-CCS 24, 
+<a href=https://eprint.iacr.org/2024/1045>CCS 24,</a>
 with Sarvar Patel, Joon Young Seo, and Kevin Yeo.
 
 <li>
