adding EC25 and PODS25

--- a/index.html
+++ b/index.html
@@ -272,8 +272,14 @@ Deadline for submissions: Oct. 15, 2023.
 <li>
 <a href=https://scn.unisa.it/scn24/>SCN 24</a>. 
 Conference: September 11-13, 2024
-</ul>
 
+<li>
+<a href=https://2025.sigmod.org/org_pods_pc.shtml>ACM PODS 25</a>.
+Conference June 22-27, 2025, Berlin.
+
+<li>
+<a href=https://eurocrypt.iacr.org/2025/>Eurocrypt 2025</a>. Deadline: October 2, 2024. Conference: May 4-8, 2025, Madrid.
+</ul>
 
 <b>Recent activities</b>
 <ul>
