Stupid typo that went unnoticed for several years

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ I am a professor of Computer Science at the Dipartimento di Scienze Aziendali --
 
 
 <p>
-I got my <i>Laurea in Science dell'Informazione</i> cum laude, in 1986 from
+I got my <i>Laurea in Scienze dell'Informazione</i> cum laude, in 1986 from
 Salerno, my M.Sc. in Computer Science from Harvard University in 1988,
 and my Ph.D. in Computer Science from Harvard University in 1992.
 Between Salerno and Harvard, I worked for Olivetti, in Ivrea, Italy.
