--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ My main research area is Theoretical Computer Science with a special focus on Cr
 <b>Recent Papers</b>
 <ul>
 <li>
-<i>Public-Key Anamorphism in (CCA-secure) Public-Key Encryption and Beyond</i>. CRYPTO 24, 
+<i>Public-Key Anamorphism in (CCA-secure) Public-Key Encryption and Beyond</i>. 
+<a href=https://link.springer.com/chapter/10.1007/978-3-031-68379-4_13>CRYPTO 24</a>, 
 with Duong Hieu Phan and Moti Yung.
 
 <li>
