--- a/Technical/index.html
+++ b/Technical/index.html
@@ -33,16 +33,22 @@ layout: default
 <ul>
     <li><a href=./slides/crypto24.pdf>Crypto 24</a>. 
             Introducing public-key anamorphism and 
-            showing link between CCA encryption and anamorphism. August 24.
-    <li><a href=./slides/croatia.pdf>Summer School on real-world crypto and privacy 2024</a>. June 24.
+            showing link between CCA encryption and anamorphism. 
+            August 24.
+    <li><a href=./slides/croatia.pdf>Summer School on real-world crypto and privacy 2024</a>. 
+            Overview with a didactic approach.
+            June 24.
     <li><a href=./slides/anamorphicSignatures.pdf>Anamorphic Signatures</a>.
-        Talk given at NYU. August 23.
+            Introducing anamorphic signatures. 
+            Talk given at NYU, August 23.
     <li><a href=./slides/anamorphicPETS23.pdf>PETS23</a> 
-        Establishing the prevalence of anamorphic encryption. July 23. 
+            Establishing the prevalence of anamorphic encryption. 
+            July 23. 
     <li><a href=./slides/extendedAnamorphicEnc.pdf>Extended</a>.
-        Talk on anamorphic encryption given at NYU. 
+            Talk on anamorphic encryption given at NYU with an overview on
+            still to come results.
     <li><a href=./slides/anamorphicEC22.pdf>Eurocrypt 22</a> 
-        First set of results, establishing feasibility of 
-        anamorphic encryption. June 22.
+            First set of results, establishing feasibility of 
+            anamorphic encryption. June 22.
 
 </ul>
