--- a/index.html
+++ b/index.html
@@ -238,61 +238,25 @@ This is tight as there exist ORAM-based constructions of EMMs with logarithmic s
 <hr>
 <b>Program Committees</b>
 <ul>
-<li>
-<a href=https://crypto.iacr.org/2019/>CRYPTO 19</a>: conference August 17.
-<li>
-<a href=http://wine2019.cs.columbia.edu/>WINE 2019: The 15th Conference on Web and Internet Economics</a>: list of accepted papers published.
-<li>
-<a href=https://ccsw.io/>The ACM Cloud Computing Security Workshop CCSW 19</a>: taking place, November 11.
-<li>
-<a href=https://econcs.pku.edu.cn/icalp2020/>ICALP 2020</a>: acceptance/rejection letters are out, April 17.
-<li>
-<a href=https://scn.unisa.it/scn20/>SCN 2020</a>:
-Conference took place online.
-Video presentations are available 
-<a href=https://scn.unisa.it/index.php/conference-program-sept-14/>here</a>, 
-<a href=https://scn.unisa.it/index.php/conference-program-sept-15/>here</a>,
-and
-<a href=https://scn.unisa.it/index.php/conference-program-sept-16/>here</a>. 
-
-<li>  <a  href=https://aamas2021.soton.ac.uk/>20th International Conference on Autonomous Agents and Multiagent Systems (AAMAS)</a>: reviewing.
-
-The conference will be a fully virtual event, 
-at the dates announced originally (3-7 May 2021).
-
-<li>
-<a href=https://scn.unisa.it/scn22/>SCN 2022</a>:
+<li> <a href=https://crypto.iacr.org/2025/>CRYPTO 2025</a>.  Conference: August 17-21, 2025.
+<li> <a href=https://2025.sigmod.org/org_pods_pc.shtml>ACM PODS 25</a>.  Conference June 22-27, 2025, Berlin.
+<li> <a href=https://eurocrypt.iacr.org/2025/>Eurocrypt 2025</a>. Deadline: October 2, 2024. Conference: May 4-8, 2025, Madrid.
+<li> <a href=https://scn.unisa.it/scn24/>SCN 24</a>.  Conference: September 11-13, 2024.
+<li> <a href=https://crypto.iacr.org/2024/>CRYPTO 2024</a>. Conference: August 18-22, 2024
+<li> Area Chair for Theoretical Foundations and Advanced Primitives for <a href=https://pkc.iacr.org/2024/callforpapers.php>PKC 2024</a> in Sydney.  Deadline for submissions: Oct. 15, 2023.
+<li> <a href=https://eurocrypt.iacr.org/2023//>Eurocrypt 23</a>: reviewing submissions. 111 papers accepted out of 418 submitted.
+<li> <a href=https://www.augusta.edu/ccs/conferences/cans2023/index.php>CANS 2023</a>: accepting submissions, reviewing, program completed.
+<li> <a href=https://www.sigsac.org/ccs/CCS2023/>CCS 2023</a> Applied Cryptography Track.
+<li> <a href=https://scn.unisa.it/scn22/>SCN 2022</a>:
 so many good submissions! bidding for papers! program is out! 
 conference was great!
 
-<li>
-<a href=https://eurocrypt.iacr.org/2023//>Eurocrypt 23</a>: reviewing submissions. 111 papers accepted out of 418 submitted.
-    
-<li>
-<a href=https://www.sigsac.org/ccs/CCS2023/>CCS 2023</a> Applied Cryptography Track.
-
-<li>
-<a href=https://www.augusta.edu/ccs/conferences/cans2023/index.php>CANS 2023</a>: accepting submissions, reviewing, program completed.
-
-<li> Area Chair for Theoretical Foundations and Advanced Primitives for <a href=https://pkc.iacr.org/2024/callforpapers.php>PKC 2024</a> in Sydney.
-Deadline for submissions: Oct. 15, 2023.
-
-<li> 
-<a href=https://crypto.iacr.org/2024/>CRYPTO 2024</a>. Conference: August 18-22, 2024
-<li>
-<a href=https://scn.unisa.it/scn24/>SCN 24</a>. 
-Conference: September 11-13, 2024
-
-<li>
-<a href=https://2025.sigmod.org/org_pods_pc.shtml>ACM PODS 25</a>.
-Conference June 22-27, 2025, Berlin.
-
-<li>
-<a href=https://eurocrypt.iacr.org/2025/>Eurocrypt 2025</a>. Deadline: October 2, 2024. Conference: May 4-8, 2025, Madrid.
 </ul>
 
 <b>Recent activities</b>
 <ul>
+<li>Attending <a href=https://tcc.iacr.org/2024/>TCC 2024</a> in Milano, Italia.
+<li>Attending <a href=https://crypto.iacr.org/2024/>CRYPTO 2024</a> in Santa Barbara.
 <li>Lecturing on Anamorphic Cryptography at the
 <a href=https://summerschool-croatia.cs.ru.nl/2024/>Summer School on real-world crypto and privacy 2024</a> in Vodice, Croatia, June 2-4, 2024.
 <a href=./Technical/slides/croatia.pdf>Slides</a>.
