--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ We also present matching lower bounds for the non-adaptive static membership pro
 <li>
 <i>Anamorphic Signatures: Secrecy from a Dictator Who Only Permits Authentication!</i>
 <a href=https://link.springer.com/chapter/10.1007/978-3-031-38545-2_25>CRYPTO 23,</a>
-with Miroslaw Kutylowski, Duong Hieu Phan, Moti Yung, and  Marcin Zawada:
+with Miroslaw Kutylowski, Duong Hieu Phan, Moti Yung, and  Marcin Zawada.
 <br>
 [<a href="javascript:toggle('abstract9');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract9" style="display:none;">
@@ -118,7 +118,7 @@ In this work, we tackle whether it is possible to further push this construction
 <li>
 <i>The Self-Anti-Censorship Nature of Encryption: On the Prevalence of Anamorphic Cryptography.</i>
 <a href=https://petsymposium.org/popets/2023/popets-2023-0104.php>PETS 23,</a>
-with Miroslaw Kutylowski, Duong Hieu Phan, Moti Yung, and  Marcin Zawada:
+with Miroslaw Kutylowski, Duong Hieu Phan, Moti Yung, and  Marcin Zawada.
 <br>
 [<a href="javascript:toggle('abstract10');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract10" style="display:none;">
