--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Performing searches over encrypted data is a very current and active area. Sever
 We propose security model for this problem that we call Secure Selective Stream (SSS) and give a secure construction for it based on hard problems in Pairing-Based Cryptography. The cryptographic core of our construction is a new primitive, Amortized Orthogonality Encryption, that is crucial for the efficiency of the proposed implementation for SSS.
 </div>
 <li>
-<i>Anamorphic Encryption: Private Communication against a Dictator.</i>.
+<i>Anamorphic Encryption: Private Communication against a Dictator.</i>
 <a href=https://ia.cr/2022/639>Eurocrypt 2022,</a>
 with Duong Hieu Phan and Moti Yung.
 <br>
