--- a/index.html
+++ b/index.html
@@ -45,15 +45,16 @@ My main research area is Theoretical Computer Science with a special focus on Cr
 <li><a href=talks.html>Talks</a>
 </ul>
 
-<hr>
 
 <hr>
 <b>Recent Papers</b>
 <ul>
-<li>
+<li> 2024
+<ul>
 <i>Differentially Private Set Representations</i>. 
 <a href=https://papers.nips.cc/paper_files/paper/2024/hash/94ffbc2939e18adac36eedf8d38d1ef3-Abstract-Conference.html>NeurIPS 24</a>, 
-with Sarvar Patel, Joon Young Seo, and Kevin Yeo
+with Sarvar Patel, Joon Young Seo, and Kevin Yeo.
+<br>
 [<a href="javascript:toggle('abstract12');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract12" style="display:none;">
 We study the problem of differentially private (DP) mechanisms for 
@@ -106,6 +107,7 @@ This generalizes a solution to the membership problem
 (i.e., where no values are associated with keys) due to Buhrman et al..
 We also present matching lower bounds for the non-adaptive static membership problem in the deterministic setting. Our lower bound implies that both our dictionary algorithm and the preceding membership algorithm are optimal, and in particular that there is an inherent complexity gap in these problems between no adaptivity and one round of adaptivity (with which hashing-based algorithms solve these problems in constant time). Using the ideas underlying our data structure, we also obtain the first implementation of a n-wise independent family of hash functions with optimal evaluation time in the cell probe model.
 </div>
+</ul>
 
 
 
