--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@ This is tight as there exist ORAM-based constructions of EMMs with logarithmic s
 <hr>
 <b>Program Committees</b>
 <ul>
+<li> Eurocrypt 2026. Area chair for Foundations.
+<li> <a href=https://petsymposium.org/cfp26.php>PoPETS 2026</a>
 <li> <a href=https://crypto.iacr.org/2025/>CRYPTO 2025</a>.  
 Deadline: February 13, 2025. 
 Conference: August 17-21, 2025.
