--- a/index.html
+++ b/index.html
@@ -49,8 +49,22 @@ My main research area is Theoretical Computer Science with a special focus on Cr
 <hr>
 <b>Recent Papers</b>
 <ul>
+<li> 2025
+<ul>
+<li>
+<i>	
+Plinko: Single-Server PIR with Efficient Updates via Invertible PRFs.</i>
+<a href=https://link.springer.com/chapter/10.1007/978-3-031-91095-1_1>Eurocrypt 2025</a>
+with Alexander Hoover, Sarvar Patel, and Kevin Yeo.
+<li>
+<i>Anamorphism Beyond One-to-One Messaging: Public-Key with Anamorphic Broadcast Mode.</i>
+<a href=https://link.springer.com/chapter/10.1007/978-3-031-91131-6_15>Eurocrypt 2025</a>
+with
+	Xuan Thanh Do, Duong Hieu Phan, and Moti Yung.
+</ul>
 <li> 2024
 <ul>
+<li>
 <i>Differentially Private Set Representations</i>. 
 <a href=https://papers.nips.cc/paper_files/paper/2024/hash/94ffbc2939e18adac36eedf8d38d1ef3-Abstract-Conference.html>NeurIPS 24</a>, 
 with Sarvar Patel, Joon Young Seo, and Kevin Yeo.
