--- a/index.html
+++ b/index.html
@@ -309,6 +309,8 @@ conference was great!
 
 <b>Recent activities</b>
 <ul>
+<li>Invited speaker at  the <a href=https://ictcs2025.unich.it/>26th Italian Conference on Theoretical Computer Science</a>, Pescara (IT), September 10-12, 2025.
+
 <li>Attending <a href=https://tcc.iacr.org/2024/>TCC 2024</a> in Milano, Italia.
 <li>Attending <a href=https://crypto.iacr.org/2024/>CRYPTO 2024</a> in Santa Barbara.
 <li>Lecturing on Anamorphic Cryptography at the
